file di lroenzo

--- a/accesso.html
+++ b/accesso.html
@@ -27,7 +27,7 @@
                     var p=u[i].point;
                     var aux={user:u[i].user,point:p};
                     localStorage.lastUser=JSON.stringify(aux);
-                   location.href="gioco.html";
+                   location.href="index.html";
                     return true;
                 }
             }
