--- a/accesso.html
+++ b/accesso.html
@@ -126,7 +126,7 @@
     <p align="center" style="font-family:Trebuchet; font-size: xx-large; color:black;">Effettua l'accesso e gioca! </p></font>
 </head>
 
-    <body style="background-image: url(verde.jpg)"  >
+    <body style="background-image: url(d1.png)"  >
 
       <form name="modulo">
 
@@ -151,14 +151,21 @@
 
             </div>
 
+        </form>
+        <br>
+        <br>
+        <p align="center" style="font-family:Trebuchet; font-size: large; color:black;">Non ti sei ancora registrato? </font><input type="button" value="Registrati ora!" onclick=location.href="registrazione.html"> </p>
+        <br>
+        </form>
 
+        <!--
         </form>
         <br>
         <br>
         <p align="center" style="font-family:Trebuchet; font-size: large; color:black;">Non ti sei ancora registrato? clicca il pulsante qui sotto  </font></p>
         <br>
         <p align="center"><input type="button" value="Registrati ora" onclick=location.href="registrazione.html"></p>
-        </form>
+        </form>-->
 </body>
 
 
