--- a/registrazione.html
+++ b/registrazione.html
@@ -77,7 +77,7 @@
 
     </script>
     <title>Registrazione</title>
-        <p align="center" ><font face="Trebuchet" size="32" color="black">Reqistrati qui! </font></p>
+        <p align="center" ><font face="Trebuchet" size="32" color="black">Registrati qui! </font></p>
         <style type="text/css">
             form {
                 border: 3px solid #f1f1f1;
@@ -163,7 +163,7 @@
             </style>
 
 </head>
-<body style="background-image: url(verde.jpg)" onload="inizializzaStorageUtenti()">
+<body style="background-image: url(d1.png)" onload="inizializzaStorageUtenti()">
 
         <form action="" name="modulo" method="post" accept-charset="utf-8">
 
