--- a/accesso.html
+++ b/accesso.html
@@ -39,7 +39,7 @@
 
     <title>Accesso</title>
     <style type="text/css">
-
+    
         form {
             border: 3px solid #f1f1f1;
             width: 40%;
@@ -123,7 +123,7 @@
 
         </style>
 
-    <p align="center" style="font-family:Trebuchet; font-size: xx-large; color:black;">Effettua l'accesso e gioca! </p></font>
+    <p align="center" style="font-family:Trebuchet; font-size: xx-large; color:black;">Effettua l'accesso! </p></font>
 </head>
 
     <body style="background-image: url(d1.png)"  >
@@ -136,7 +136,7 @@
               <label><b>Username</b></label>
               <input type="text" id="username" placeholder="Inserisci Username" name="uname" required>
 
-              <label style="position:relative; left:10%;"><b>   Password</b></label>
+              <label style="position:relative; left:8%;"><b> Password</b></label>
 
               <input type="password" id="password" placeholder="Inserisci Password" name="psw" required>
 
