--- a/indexpy.html
+++ b/indexpy.html
@@ -2,38 +2,69 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Python</title>
-    <link rel = "stylesheet" href = "css/master2.css">
+    <title>PYTHON</title>
+    <link rel = "stylesheet" href = "css/masterPY.css">
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch"
     rel="stylesheet">
   </head>
   <body>
-
   </body>
+  
   <section class="content navbar">
   <nav class= "navbar">
-    <a href ="index.html">Home</a>
-    <a href ="index.html#Linguaggi">Linguaggi</a>
-    <a href ="index.html#About">About</a>
-    <a href ="index.html#Contact">Contact</a>
+    <a href ="index.html"><font color="FFBF18">Home</font><br/></a>
+    <a class="ext" href ="http://www.python.it/"><font color="FFBF18">Sito Ufficiale</font><br/></a>
   </nav>
 </section>
+
 <section class ="content sfondo">
- <!-- Project One -->
- <h2 class="title">Linguaggio</h2>
  <ul class="list-linguaggi">
    <li>
-
-       <img src="images2/pygrande.jpg" alt="NOOOOOOOME">
-       <figcaption>Nome</figcaption>
+       <p><img src="images/logopy.png" align="left"> 
+        <font color = "0000FF">
+        Il C è un linguaggio di programmazione imperativo ad alto livello.
+        Nato nel 1973, oggi è supportato dalla totalità dei principali sistemi operativi.
+        Rinomato per la sua efficienza, è principalmente impiegato nella realizzazione di 
+        librerie, linguaggi di programmazione e sistemi operativi; diventando un'autorità
+        proprio nello sviluppo di quest'ulitmi.
+        </font><br/>
+      </p>
    </li>
   </ul>
-
-    <!-- /.row -->
 </section>
+
 <section class="content paragrafo">
-  <p> bleblebelbelbelebleblebelbeleblebelbb</p>
-
+  <p>STORIA</p>
+  <font color="000000"></font><br/>
+  </nav>
 </section>
+
+<section class ="content sfondo">
+ <ul class="list-linguaggi">
+   <li>
+       <p><img src="images3/monty.jpg" align="right"> 
+        <font color = "0000FF">
+        Il linguaggio venne originariamente sviluppato da Dennis Ritchie presso 
+i Bell Labs della AT&T tra il 1969 e il 1973, con lo scopo di utilizzarlo 
+per la stesura del sistema operativo UNIX, precedentemente realizzato 
+da Ken Thompson e Ritchie stesso in assembly. 
+Nel 1972 esordì il primo sistema UNIX, scritto interamente 
+col nuovo nato linguaggio di programmazione C.
+Nel 1978 la pubblicazione del libro Il linguaggio C ne fece 
+crescere rapidamente la diffusione, portando alla nascita 
+di diversi dialetti e dunque alla necessità di definire uno standard.
+La prima standardizzazione del C venne realizzata ad opera dell'ANSI 
+nel 1989 nota come C89. 
+Successivamente l'ISO ha rilasciato varie versioni del 
+linguaggio C, di queste C99 è quella che ha portato i principali 
+miglioramenti, introducendo modifiche importanti 
+come nuovi tipi di dato, gli inizializzatori designati per gli array, 
+gli array di dimensione variabile. 
+        </font><br/>
+      </p>
+   </li>
+  </ul>
+</section>
+
 
 </html>
