--- a/registrazione.html
+++ b/registrazione.html
@@ -83,7 +83,7 @@
                 border: 3px solid #f1f1f1;
                 width: 33%;
                 position:absolute ;
-                left:35%;
+                left:33%;
                 top:20%;
             }
             .accedi {
@@ -118,7 +118,7 @@
                 border: none;
                 cursor: pointer;
                 width: 100%;
-                font-family: "Comic Sans MS";
+                font-family: "Courier";
                 border-radius:10px 10px 10px 10px;
 
             }
