--- a/indexc.html
+++ b/indexc.html
@@ -3,36 +3,60 @@
   <head>
     <meta charset="utf-8">
     <title>C</title>
-    <link rel = "stylesheet" href = "css/master2.css">
+    <link rel = "stylesheet" href = "css/masterC.css">
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch"
     rel="stylesheet">
   </head>
   <body>
-
   </body>
+  
   <section class="content navbar">
   <nav class= "navbar">
-    <a href ="index.html">Home</a>
-    <a href ="index.html#Linguaggi">Linguaggi</a>
-    <a href ="index.html#About">About</a>
-    <a href ="index.html#Contact">Contact</a>
+    <a href ="index.html"><font color="000000">Home</font><br/></a>
+    <a href ="esc.html"><font color="000000">Sito Ufficiale</font><br/></a>
+
   </nav>
 </section>
+
 <section class ="content sfondo">
  <!-- Project One -->
- <h2 class="title">Linguaggio</h2>
+ <!--<h2 class="title">Linguaggio</h2>-->
  <ul class="list-linguaggi">
    <li>
-       <img src="images2/cgrande.jpg" alt="NOOOOOOOME">
+       <p><img src="images/logoc.png" align="middle">
+        <font color = "00FF00">
+        Il C è un linguaggio di programmazione imperativo ad alto livello.
+        Nato nel 1973, oggi è supportato dalla totalità dei principali sistemi operativi.
+        Rinomato per la sua efficienza, è principalmente impiegato nella realizzazione di 
+        librerie, linguaggi di programmazione e sistemi operativi; diventando un'autorità
+        proprio nello sviluppo di quest'ulitmi.
+        </font><br/>
+      </p>
 
-       <figcaption>Nome</figcaption>
+       <!--<figcaption>Nomme</figcaption>-->
    </li>
   </ul>
 </section>
-<section class="content paragrafo">
-  <p> bleblebelbelbelebleblebelbeleblebelbb</p>
 
+<section class="content paragrafo">
+  <p>LEZIONI</p>
+  <font color="000000"></font><br/>
+  </nav>
 </section>
+
+<section class ="content sfondo">
+ <ul class="list-linguaggi">
+   <li>
+        <font color = "00FF00">
+        <a href ="C/lez1.html"><font color="00FF00">Lezione 1</font><br/></a>
+        </font><br/>
+      </p>
+
+       <!--<figcaption>Nomme</figcaption>-->
+   </li>
+  </ul>
+</section>
+  
 
     <!-- /.row -->
 
