--- a/indexc.html
+++ b/indexc.html
@@ -9,18 +9,16 @@
   </head>
   <body>
   </body>
-  
+
+  <!--HOME SITO UFFICIALE-->
   <section class="content navbar">
   <nav class= "navbar">
     <a href ="index.html"><font color="000000">Home</font><br/></a>
     <a href ="esc.html"><font color="000000">Sito Ufficiale</font><br/></a>
-
   </nav>
 </section>
 
 <section class ="content sfondo">
- <!-- Project One -->
- <!--<h2 class="title">Linguaggio</h2>-->
  <ul class="list-linguaggi">
    <li>
        <p><img src="images/logoc.png" align="middle">
@@ -32,12 +30,12 @@
         proprio nello sviluppo di quest'ulitmi.
         </font><br/>
       </p>
-
-       <!--<figcaption>Nomme</figcaption>-->
    </li>
   </ul>
 </section>
+<!------------------------------------------------>
 
+<!--LEZIONI-->
 <section class="content paragrafo">
   <p>LEZIONI</p>
   <font color="000000"></font><br/>
@@ -47,17 +45,14 @@
 <section class ="content sfondo">
  <ul class="list-linguaggi">
    <li>
-        <font color = "00FF00">
         <a href ="C/lez1.html"><font color="00FF00">Lezione 1</font><br/></a>
-        </font><br/>
+        <a href ="C/lez2.html"><font color="00FF00">Lezione 2</font><br/></a>
+        <a href ="C/lez3.html"><font color="00FF00">Lezione 3</font><br/></a>
       </p>
-
-       <!--<figcaption>Nomme</figcaption>-->
    </li>
   </ul>
 </section>
-  
 
-    <!-- /.row -->
+<!---------------------------------------------------------->
 
 </html>
