--- a/indexpy.html
+++ b/indexpy.html
@@ -9,7 +9,8 @@
   </head>
   <body>
   </body>
-  
+
+<!--HOME SITO UFFICIALE-->
   <section class="content navbar">
   <nav class= "navbar">
     <a href ="index.html"><font color="FFBF18">Home</font><br/></a>
@@ -22,49 +23,32 @@
    <li>
        <p><img src="images/logopy.png" align="left"> 
         <font color = "0000FF">
-        Il C è un linguaggio di programmazione imperativo ad alto livello.
-        Nato nel 1973, oggi è supportato dalla totalità dei principali sistemi operativi.
-        Rinomato per la sua efficienza, è principalmente impiegato nella realizzazione di 
-        librerie, linguaggi di programmazione e sistemi operativi; diventando un'autorità
-        proprio nello sviluppo di quest'ulitmi.
+       Python è un linguaggio di programmazione ad alto livello, orientato agli oggetti, adatto, tra gli altri usi, a sviluppare applicazioni distribuite, scripting, computazione numerica e system testing.
+       Fu ideato da Guido van Rossum all'inizio degli anni novanta; il nome fu scelto per via della passione di van Rossum per i Monty Python.
+       Oggi grandissime imprese quali YouTube, Google o la NASA utilizzano Python.
         </font><br/>
       </p>
    </li>
   </ul>
 </section>
+<!------------------------------------------------>
 
-<section class="content paragrafo">
-  <p>STORIA</p>
-  <font color="000000"></font><br/>
+<!--LEZIONI-->
+<section class="content navbar">
+  <p><font color="FFBF18">LEZIONI</font></p>
   </nav>
 </section>
 
 <section class ="content sfondo">
  <ul class="list-linguaggi">
    <li>
-       <p><img src="images3/monty.jpg" align="right"> 
-        <font color = "0000FF">
-        Il linguaggio venne originariamente sviluppato da Dennis Ritchie presso 
-i Bell Labs della AT&T tra il 1969 e il 1973, con lo scopo di utilizzarlo 
-per la stesura del sistema operativo UNIX, precedentemente realizzato 
-da Ken Thompson e Ritchie stesso in assembly. 
-Nel 1972 esordì il primo sistema UNIX, scritto interamente 
-col nuovo nato linguaggio di programmazione C.
-Nel 1978 la pubblicazione del libro Il linguaggio C ne fece 
-crescere rapidamente la diffusione, portando alla nascita 
-di diversi dialetti e dunque alla necessità di definire uno standard.
-La prima standardizzazione del C venne realizzata ad opera dell'ANSI 
-nel 1989 nota come C89. 
-Successivamente l'ISO ha rilasciato varie versioni del 
-linguaggio C, di queste C99 è quella che ha portato i principali 
-miglioramenti, introducendo modifiche importanti 
-come nuovi tipi di dato, gli inizializzatori designati per gli array, 
-gli array di dimensione variabile. 
-        </font><br/>
+        <a href ="python/lez1.html"><font color="0000FF">Lezione 1</font><br/></a>
+        <a href ="python/lez2.html"><font color="0000FF">Lezione 2</font><br/></a>
+        <a href ="python/lez3.html"><font color="0000FF">Lezione 3</font><br/></a>
       </p>
    </li>
   </ul>
 </section>
 
-
+<!---------------------------------------------------------->
 </html>
